<resources>
    <string name="app_name">ABND Proj 2 -  Basketball Score Keeper</string>

    <string name="teamA">Team A</string>
    <string name="teamB">Team B</string>
    <string name="add3">+3 Points</string>
    <string name="add2">+2 Points</string>
    <string name="add1">+1 Points</string>
    <string name="scoreA">0</string>
    <string name="scoreB">0</string>


    <string name="title">VEX  turning point\nmath scoring</string>
    <string name="competition">Alliance</string>
    <string name="alliance_1">blue</string>
    <string name="alliance_2">red</string>
    <string name="high_flag">high flag</string>
    <string name="low_flag">low_flag</string>
    <string name="high_cap">high cap</string>
    <string name="low_cap">low cap</string>
    <string name="autonomous">autonomous</string>
    <string name="score">score</string>
    <string name="reset">reset</string>
    <string name="center_park">center park</string>
    <string name="park">park</string>
</resources>
